<resources>
    <string name="app_name">Memetrix</string>

    <string name="default_email">luis.paulino@belatrixsf.com</string>

    <!-- Common -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Belatrix Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repita su contraseña</string>
    <string name="loading">Loading &#8230;</string>
    <string name="accept">Accept</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="lorem_ipsum">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum. ¿Por qué lo usamos? Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).</string>

    <!-- POWERED BY -->
    <string name="powered_by">Powered by Luis Alonso Paulino Flores</string>

    <!-- T&C -->
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

    <!-- MEME -->
    <string name="add_meme">Add Meme</string>
    <string name="add_meme_options">Choose one of these options to add your meme</string>
    <string name="pick_existing_meme">Pick existing</string>
    <string name="create_meme">Create</string>

    <!-- MESSAGES -->
    <string name="message_success_default">Success Operation</string>
    <string name="message_error_default">Something went wrong! :(</string>
    <string name="message_error_invalid_credentials">Credenciales inválidas :(</string>

    <!-- DRAWER -->
    <string name="menu_about_us">About us</string>
    <string name="menu_memes">Memes</string>
    <string name="menu_my_groups">My groups</string>
    <string name="menu_favorites">My favorites</string>
    <string name="menu_logout">Logout</string>

    <!-- Groups -->
    <string name="total_members">Total de miembros: </string>
</resources>
